--- a/img/md_style.css
+++ b/img/md_style.css
@@ -1,6 +1,24 @@
-img[alt = img] {
+img[alt = big] {
 
 	width: 80%;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+
+}
+
+img[alt = medium] {
+
+	width: 40%;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+
+}
+
+img[alt = in_table] {
+
+	width: 200px;
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
